Remoção de api de whatsapp
