# src/models/Whatsapp.ts
@@ -1,6 +1,0 @@
-type Whatsapp = {
-    body: String; 
-    to: String;
-}
-export default Whatsapp
-
