# src/router.ts
@@ -1,17 +1,14 @@
 import * as express from 'express'
 import User from './models/User'
-import Whatsapp from './models/Whatsapp'
 import { v4 as id } from 'uuid';
 import cors from 'cors'
+
 
 class Router {
 
     constructor(server: express.Express) {		
-		const twilio = require('twilio');
-		const client = twilio("ACdbd1ed045a9cfc9ca9cc6ac619422079", "1c57ddbbd2db9e8054b0284f8d6af6c3");
+
         const router = express.Router()
-		
-		const whatsapp = new Map<string, Whatsapp>();
 
         const users = new Map<string, User>();
         users[id()] = { name: "Drácula", age: "7", phone: "21999999999" }
@@ -86,25 +83,6 @@ class Router {
             }
         });
 		
-		//Send message
-        router.post('/whatsapp', cors(), (req: express.Request, res: express.Response) => {
-            try {
-				let whatsapp: Whatsapp = {} as Whatsapp;
-				Object.assign(whatsapp, req.body)
-                client.messages.create({
-				from: 'whatsapp:+14155238886',
-				body: whatsapp.body,
-				to: 'whatsapp:'+whatsapp.to
-				}).then(message => {
-									console.log(message.sid);
-									            res.json({
-														message: `Success -> Send message`
-													});
-									})
-            } catch (e) {
-                res.status(400).send(JSON.stringify({ "error": "problem with posted data" }));
-            }
-        })
 
         router.options('*', cors());
 
